trying to fix text align on bird

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ section {
     padding: 15px
 }
 
-.bird h1 h2 h4 {
+#bird h1 h2 h4 {
     text-align: center;
 }
 
